tripId show in tripboard list

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -150,7 +150,7 @@
                             <input type="checkbox" ng-change="selectRoute(container)" ng-model="container.route_selected"
                               name="route" class="tick" style="height: 25px; width: 25px;"
                               ng-show="container.status !== 'assign_requested'">
-                            <span class="title_text"># {{container.routeId+' - '+container.vehicle_type}}  </span>
+                            <span class="title_text"># {{container.tripId+' - '+container.vehicle_type}}  </span>
                           </div>
                         </div>
 
