--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -213,7 +213,7 @@
     <div class="vaayu-modal-content" style="width: 90%;margin-left: 95px;">
       <div class="vaayu-modal-header">
 
-        <span> Route - {{modelData.trip_id}}</span>
+        <span> Trip - {{modelData.trip_id}}</span>
         <!-- <span style="float: right;">
           <div ng-dropdown-multiselect=""  options="vehicleList" style="display: inline-block;"
           selected-model="SelectedEmp " checkboxes="true" extra-settings="example14settings"
