--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -12,7 +12,7 @@
           <toaster-container ng-show="toggleView" toaster-options='{"showDuration": "300",
           "hideDuration": "1000",
           "timeOut": "2000",
-          "extendedTimeOut": "1000",}''></toaster-container>
+          "extendedTimeOut": "1000",}'></toaster-container>
           <div class="form-group pr-2">
             <select id="disabledSelect" class="form-control" ng-model="selectedShift">
               <option ng-repeat="shift in shifts" value="{{shift}}">{{shift.name + ' ('+shift.shift_type+')'}}
