--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -14,6 +14,20 @@
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     padding-top: 80px;  /*from top padding */
   }
+
+  .date-box{
+    text-align: center;
+    margin-top: 15px;
+  }
+
+  .generate-modal{
+    top: 50%;
+    position: absolute;
+    left: 0;
+    transform: translateX(-50%);
+    transform: translateY(-50%);
+    padding-top: 0px;
+  }
   
   /* Modal Content/Box */
   .vaayu-modal-content {
