changes in the roster popup box styling

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -461,8 +461,8 @@
 
   </div>
   <div id="myModal" class="vaayu-modal" style="display: block;z-index: 4;" ng-show="showGenerateDialog">
-    <div class="vaayu-modal-content generate-modal" style="max-width:750px;">
-      <div class="vaayu-modal-header">
+    <div class="vaayu-modal-content generate-modal" style="max-width:750px; padding-top: 0;">
+      <div class="vaayu-modal-header" style="background: #fff; position: relative; display: block;">
         <span>Generate Routes</span>
         <span class="vaayu-pop-close closepop" ng-click="closeAll()">&times;</span>
       </div>
