Drop off and Pickup changed to log out and login, sitewide

--- a/app/views/dashboard/modals/_on_time_arrivals.html.slim
+++ b/app/views/dashboard/modals/_on_time_arrivals.html.slim
@@ -30,7 +30,7 @@
                 #d-off-on-time-pick-up.stats-sm-panel.panel.panel-primary.bg-primary
                   .panel-body
                     p.lead
-                      | On-Time First Pick Up
+                      | On-Time First Login
                     .row
                       .col-sm-2.col-sm-offset-1.no-padding
                         p.chart-label
@@ -94,7 +94,7 @@
                 #pick-up-on-time-pick-up.stats-sm-panel.panel.panel-primary.bg-primary
                   .panel-body
                     p.lead
-                      | On-Time First Pick Up
+                      | On-Time First Login
                     .row
                       .col-sm-2.col-sm-offset-1.no-padding
                         p.chart-label
