--- a/app/views/reports/_employee_logs.html.slim
+++ b/app/views/reports/_employee_logs.html.slim
@@ -41,11 +41,11 @@
           th
             | I Am Here
           th
-            | Pick Up Time
+            | Login Time
           th
             | Wait Time (min)
           th
-            | Drop Off Time
+            | Log out Time
           th
             | Employee Status
           th
