--- a/app/views/reports/_exceptions_summary.html.slim
+++ b/app/views/reports/_exceptions_summary.html.slim
@@ -20,7 +20,7 @@
           th
             | Employees as No-Show
           th
-            | Pick Up No Show
+            | Login No Show
           th
-            | Drop Off No Show
+            | Log out No Show
       tbody
