--- a/app/views/reports/_ota.html.slim
+++ b/app/views/reports/_ota.html.slim
@@ -35,10 +35,10 @@
           th
             | Delta In Arrival At Site (min)
           th
-            | Planned First Pick Up Time
+            | Planned First Login Time
           th
-            | Actual Arrival Time For First Pick Up (min)
+            | Actual Arrival Time For First Login (min)
           th
-            | Wait Time At First Pick Up (min)
+            | Wait Time At First Login (min)
       tbody
   = render :partial => 'report_download_modal', locals: { report_name: 'otas'}
