--- a/app/views/reports/_trip_wise_driver_exception.html.slim
+++ b/app/views/reports/_trip_wise_driver_exception.html.slim
@@ -29,9 +29,9 @@
           th
             | Out-Of-Geofence Driver Arrived
           th
-            | Out-Of-Geofence Pick Up
+            | Out-Of-Geofence Login
           th
-            | Out-Of-Geofence Drop Off
+            | Out-Of-Geofence Log out
           th
             | Panic Alert
           th
