--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -178,7 +178,7 @@
                   <td> {{$index+1}}</td>
                   <td>{{roster.trip_id}}</td>
                   <td>
-                    <a href="">{{roster.trip_type == 'Check In' ? 'Pick Up' : 'Drop Off'}}</a>
+                    <a href="">{{roster.trip_type == 'Check In' ? 'Login' : 'Log out'}}</a>
                   </td>
                   <td>{{roster.shift_time}}</td>
                   
