--- a/app/views/reports/_employee_no_show.html.slim
+++ b/app/views/reports/_employee_no_show.html.slim
@@ -35,7 +35,7 @@
           th
             | Gender
           th
-            | Employee Pick Up Location
+            | Employee Login Location
           th
             | No Show Triggered Location
           th
