--- a/app/views/trips/operator/_modal_active_trip1.html.slim
+++ b/app/views/trips/operator/_modal_active_trip1.html.slim
@@ -26,7 +26,7 @@
                 th.text-center
                   | Call
                 th.text-center
-                  | Pick Up
+                  | Login
             tbody
               tr
                 td
