--- a/app/views/trips/angular_views/_reports.html
+++ b/app/views/trips/angular_views/_reports.html
@@ -42,7 +42,7 @@
                   </div>
       
                 <button type="button"
-                  class="btn btn-terniary-blue" ng-click="downloadReport()">EXPORT</button>
+                  class="btn btn-terniary-blue" ng-click="checkIsDownloadable()">EXPORT</button>
               </form>
           </div>
         </div>
