fixes in the roster copy routes bug

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -414,7 +414,7 @@
   <div id="myModal" class="vaayu-modal" style="display: block;z-index: 4;" ng-show="showPopup">
 
     <!-- Modal content -->
-    <div class="vaayu-modal-content">
+    <div class="vaayu-modal-content" style="width: 80%;">
       <div class="vaayu-modal-header">
 
         <span>{{selectedRoster.name}}</span>
