--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,11 +1,23 @@
 .vayau-routing .card-panel .vaayu-dropzone .dndPlaceholder {
-  display: block;
-  height: 36px;
-  opacity: 0.5;
-  border: dashed 2px #707070;
-  background-color: #eaeaea;
-  margin-bottom: 4px;
-  padding: 2px 4px;
+  display: flex;
+  height: 35px;
+  border-radius: 0 !important;
+  border: dashed 2px #e2e2e2;
+  background-color:#f9f9f9 !important;
+  padding: 0px 12px;
+  align-items: center;
+  color:#aeaeae;
+  font-size: 12px;
+  opacity: 0.8;
+}
+
+.vayau-routing .card-panel .vaayu-dropzone .employee-list-group .dndDraggingSource {
+  border-radius: 0px;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.16);
+  background-color:#ffffff;
+  display: flex;
+  padding: 5px 0px;
+  opacity: 1 !important;
 }
 
 .vayau-routing .analytic-panel {
@@ -185,13 +197,15 @@
 }
 
 .vayau-routing .employee-cluster-panel {
-  /* display: inline-grid;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  width: 260px; */
   border-radius: 4px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   background-color: #ffffff;
+  max-width: 260px;
+  display: inline-block;
+  /* background-color: #eee; */
+  margin-bottom: 10px;
+  margin-right: 10px;
+  height: max-content;
 }
 
 .vayau-routing .employee-cluster-panel .employee-cluster-panel-heading .travel-group-name {
@@ -201,31 +215,28 @@
 }
 
 .vayau-routing .employee-cluster-panel .employee-cluster-panel-heading {
-  display: table;
-  width: 100%;
-  height: 51px;
+  height: 41px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   background-color: #394266;
-  padding: 4px 10px;
+  display: flex;
+  align-items: center;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .vayau-routing .employee-cluster-panel .employee-cluster-panel-heading  .title_container {
   font-family: "Roboto";
-  font-size: 12px;
-  font-weight: 900;
-  font-style: normal;
-  font-stretch: normal;
-  letter-spacing: normal;
+  font-weight: 600;
   color: #ffffff;
-  vertical-align: middle;
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding-left: 10px;
 }
-.vayau-routing .employee-cluster-panel .employee-cluster-panel-heading  .title_text {
-  flex: 1;
-  margin-left: 5px;
-  margin-top: 7px;
+.vayau-routing .employee-cluster-panel .employee-list-group .empId {
+  text-transform: uppercase;
+  text-decoration: underline;
+  font-weight: 600;
 }
 
 .vayau-routing .employee-cluster-panel .un_allocated_route {
@@ -282,13 +293,17 @@
   display: table-cell;
 }
 
-.vayau-routing .employee-cluster-panel .employee-list-group-item {
-  height: 37px;
-  border-radius: 4px;
-  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
-  background-color: #ffffff;
+.vayau-routing .employee-cluster-panel .employee-cluster-panel-body .employee-list-group-item {
+  border-radius: 0px;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.16);
+  background-color:#ffffff;
   margin-bottom: 5px;
   display: flex;
+  padding: 5px 0px;
+}
+
+.vayau-routing .employee-cluster-panel .employee-list-group-item.female {
+  background: #f3d1f1 !important;
 }
 
 .vehicle_no {
@@ -376,8 +391,9 @@
 }
 
 .vayau-routing .card-panel .employee-list-group {
-  padding: 15px;
+  padding: 10px;
   height: 100%;
+  background:#ebecf0;
 }
 
 .vayau-panel-footer .employee-list-group {
@@ -407,10 +423,13 @@
 }
 
 .employee-cluster-panel .employee-cluster-panel-heading-meta {
-  height: 42px;
-  opacity: 0.5;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
-  background-color: #eaedf1;
+  background-color:#242432;
+  color:#fff;
+  display: flex;
+  height: 35px;
+  align-items: center;
+  padding-left: 10px;
 }
 
 .employee-list-group-item.guard-add .input-group-addon  {
@@ -464,7 +483,7 @@
   height: 38px;
   border-radius: 4px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
-  border: dashed 0.5px #707070;
+  /* border: solid 0.5px #707070; */
   background-color: #ffffff;
   cursor: pointer;
   display: table;
@@ -539,18 +558,46 @@
   border: solid 0.5px #b6b6b6;
   background-color: #82d7ad;
 }
-
-
+.vayau-routing .employee-cluster-panel-body .meta-header {
+    display: flex;
+    align-items: center;
+}
+.vayau-routing .vayau-panel-footer {
+  background:#ebecf0;
+}
+.vayau-routing .employee-cluster-panel-body .guard-icon {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  padding: 2px 3px;
+  background:#14a89e;
+  height: 17px;
+  width: 17px;
+  display: flex;
+  align-content: center;
+  margin-right: 2px;
+}
+.vayau-routing .employee-cluster-panel-body .employee-list-group {
+  margin-bottom: 0;
+  min-height: 80px;
+}
+.vayau-routing .select_all_wrapper {
+  margin-top:10px !important;
+}
+.vayau-routing .select_all_wrapper label {
+  color:#000 !important;
+  font-weight: 600;
+  margin-left:4px;
+  font-size: 16px;
+}
+.vayau-routing .select_all_wrapper  .hrLine {
+  margin: 8px 0 15px 0;
+}
 .kilometer_time_duration {
   font-family: "Roboto";
   font-size: 12px;
   font-weight: 900;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 3.70;
-  letter-spacing: normal;
-  text-align: center;
-  color: #000000;
+  line-height: 1.5;
+  color: #FFF;
 }
 
 .align-center {
@@ -785,7 +832,7 @@
 
  .btn-terniary-blue {
   /* opacity: 0.5; */
-  height: 42px;
+  height: 40px;
   border-radius: 4px;
   background-color: #394266 !important;
   font-family: "Roboto";
@@ -797,6 +844,9 @@
   letter-spacing: normal;
   text-align: center;
   color: #FFF !important;
+  padding-left:15px;
+  padding-right: 15px;
+  min-width: 100px;
 }
 
 .btn-terniary-disable {
@@ -852,11 +902,11 @@
 
 .vayau-routing select {
   /* width: 259px; */
-  height: 42px;
+  height: 40px;
   /* opacity: 0.5; */
   color:#000;
   border-radius: 4px;
-  border: solid 1px #707070;
+  border: solid 1px #000;
   background-color: #ffffff;
   /* border: thin solid grey; */
   display: inline-block;
@@ -877,26 +927,34 @@
 .vayau-routing  select:focus {
   outline: 0;
 }
-
+.vaayu-dropzone .guard_checkbox {
+  height: 16px;
+  width: 16px;
+  margin-right: 2px;
+}
 .vaayu-dropzone {
-  -webkit-column-count: 3; /* Chrome, Safari, Opera */
-  -moz-column-count: 3; /* Firefox */
-  column-count: 3;
-
-  -webkit-column-gap: 1em; /* Chrome, Safari, Opera */
-  -moz-column-gap: 1em; /* Firefox */
-  column-gap: 1em;
+  -webkit-column-count: 6; /* Chrome, Safari, Opera */
+  -moz-column-count: 6; /* Firefox */
+  column-count: 6;
+  -webkit-column-gap: 2px; /* Chrome, Safari, Opera */
+  -moz-column-gap: 2px; /* Firefox */
+  column-gap: 2px;
   display: flex;
-    flex-wrap: wrap;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
 }
 
-.employee-cluster-panel { 
+.vaayu-dropzone>*{
+  flex: 1 1 80px;
+}
+
+/* .employee-cluster-panel { 
   display: inline-block;
   background-color: #eee;
   margin-bottom: 10px;
   margin-right: 10px;
   width: 31%;
-}
+} */
 
 .filter-label {
   font-family: "Roboto";
@@ -928,7 +986,7 @@
   .border-bt{border:1px solid #CCC !important;}
   .nav-tabs-new{margin-top: 18px;}
   .date_style{display: flex !important;margin-bottom: 0px;height: 42px;}
-  .data_in_style{height: 42px !important;border: 1px solid #707070 !important;}
+  .data_in_style{height: 40px !important;border: 1px solid #000 !important;}
   .cut_title{font-size: 16px;font-weight: 500;padding-bottom: 20px;}
   #toast-container > div{padding-left: 45px !important;}
   .action-buttons, .save-button{display: inline-block ;margin-right: 2px !important;}
