--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -44,7 +44,7 @@
 
           <button type="button" ng-disabled="disableBtn"
             ng-click="generateRoute(siteId, JSON.parse(selectedShift.id) , filterDate, JSON.parse(selectedShift.trip_type));"
-            class="btn btn-terniary-blue">OK</button>
+            class="btn btn-terniary-blue">Find</button>
         </form>
       </div>
 
@@ -52,7 +52,7 @@
 
         <div class="btn-toolbar float-right pad-8" role="toolbar">
           <div class="btn-group" role="group" style="float: right;">
-            <button type="button" ng-click="finalizeRoutes()" class="btn btn-terniary-blue">Finalize</button>
+            <button type="button" ng-click="finalizeRoutes()" class="btn btn-terniary-blue">Finalize Route</button>
           </div>
           <!-- <div class="btn-group" role="group">
             <button type="button" class="btn btn-terniary">Export CSV</button>
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div class="row analytic-panel">
+    <div class="row analytic-panel hide">
       <div class="col-md-2 pad-8">
         <div class="card-analytic routes">
           <div class="card-inner-wrapper">
@@ -118,11 +118,7 @@
 
     <section>
       <div class="row">
-        <div class="col-md-12">
-            <input type="checkbox" ng-change="selectAllRoute(model2)" ng-model="allRouteSelected"
-            name="all_route" class="tick" style="height: 25px; width: 25px;"> <label class="pullUpLabel">Select All Routes</label>
-        </div>
-        <div class="col-md-12">
+        <div class="col-md-12 hide">
           <ul class="vaayu-tabs">
             <li ng-class="{active:isSet(1)}"><a href ng-click="setTab(1)">ALL ROUTES</a></li>
             <li ng-class="{active:isSet(2)}"><a href ng-click="setTab(2)">ALLOCATED ROUTES</a></li>
@@ -142,24 +138,30 @@
           </ul>
         </div>
 
-        <div class="col-md-8">
-          <div class="tab-content-panel">
+        <div class="col-md-12 select_all_wrapper">
+            <input type="checkbox" ng-change="selectAllRoute(model2)" ng-model="allRouteSelected"
+            name="all_route" class="tick guard_checkbox"> <label>Select All</label>
+            <hr class="hrLine">
+        </div>
+
+        <div class="col-md-12">
+          <div class="tab-content-panel" style="padding-top: 0;">
             <div>
               <div class="card-panel row">
                 <div class="col-md-12">
                   <div ng-repeat="containers in model2">
                     <div class="vaayu-dropzone">
                       <!-- | filter :{vehicle_allocated:search} | range : 'empty_seats' : slider_empty.minValue : slider_empty.maxValue | range : 'total_seats' : slider_occupied.minValue : slider_occupied.maxValue -->
-                      <div ng-repeat="container in containers | filter :{vehicle_allocated:search}" no-drag
+                      <div ng-repeat="container in containers" no-drag
                          class="employee-cluster-panel" ng-class="{'temporaryRoute':container.subtype=='unallocated'}">
                         <div class="employee-cluster-panel-heading"
                           ng-class="container.vehicle_allocated === 'Y'?'allocated_route':'un_allocated_route'">
                           <div class="title_container" >
                             <input type="checkbox" ng-change="selectRoute(container)" ng-model="container.route_selected"
-                              name="route" class="tick" style="height: 25px; width: 25px;"
+                              name="route" class="tick guard_checkbox"
                               ng-show="container.status !== 'assign_requested'" ng-if="container.subtype!='unallocated'">
-                            <span class="title_text" ng-if="container.subtype!='unallocated'">Trip Id: {{container.tripId+' - '+container.vehicle_type}}  </span>
-                            <span class="title_text" ng-if="container.subtype=='unallocated'"> Un Assigned Employee </span>
+                            <span class="title_text" ng-if="container.subtype!='unallocated'">TP{{container.tripId+' | '+container.vehicle_type}}  </span>
+                            <span class="title_text" ng-if="container.subtype=='unallocated'"> Unassigned Employee </span>
                           </div>
                         </div>
 
@@ -168,69 +170,41 @@
                           <div class="employee-cluster-panel-heading-meta">
                             <div class="employee-cluster-panel-title">
                               <div class="row">
-                                
-                                <div class="col-md-6 align-center">
+                                <div class="col-md-12 meta-header">
+                                  <span class="guard-icon"><i class="fa fa-shield"></i></span>
+                                    <input type="checkbox" ng-model="container.guard_required" ng-change="checkBoxChanged(container)" ng-disabled="container.guard.length"
+                                    name="route" class="tick guard_checkbox">
+
                                   <span class="kilometer_time_duration" ng-class="{'bgRed':checkSiteDistance(container.total_distance)}">
-                                    <i class="fa fa-road" aria-hidden="true"></i>
-                                    {{container.total_distance}} Km
+                                      {{container.total_distance}} Km 
                                   </span>
-                                </div>
-                                <div class="col-md-6 align-center">
+                                  <span>|</span>
                                   <span class="kilometer_time_duration" ng-class="{'bgRed':checkSiteTime(container.total_time)}">
-                                    <i class="fa "></i>
-                                    {{container.total_time}} min
-                                  </span>
+                                      {{container.total_time}} Min
+                                    </span>
                                 </div>
                               </div>
                             </div>
                           </div>
 
-                          <div class="employee-cluster-panel-heading-meta">
-                              <div class="employee-cluster-panel-title">
-                                <div class="row">
-                                  <div class="col-md-12">
-                                      <div class="title_container" style="padding-top:7px;padding-left: 26px;">
-                                          <input type="checkbox" ng-model="container.guard_required" ng-change="checkBoxChanged(container)" ng-disabled="container.guard.length"
-                                            name="route" class="tick" style="height: 16px; width: 16px;">
-                                            <label class="title_text" style="position: relative;top:-2px; left:10px;color:grey;color:#000;">Guard Required </label>
-                                        </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                              
-
                           <ul class="employee-list-group" dnd-list="container.employees" dnd-allowed-types="['item']"
                             dnd-horizontal-list="true" dnd-external-sources="true" dnd-effect-allowed="all"
                             dnd-dragover="dragoverCallback(container,index, external, type)"
                             dnd-drop="dropItemCallback(container,index, item, external, type)"
-                            dnd-inserted="dropCallback(container,index, item, external, type)"
+                          
                             class="itemlist">
-                            <li ng-if="container.employees.length" class="input-group employee-list-group-item"
+                            <li ng-if="container.employees.length" class="input-group employee-list-group-item" ng-class="{'male': item.gender=='M', 'female': item.gender=='F'}"
                               ng-repeat="item in container.employees" dnd-draggable="item" dnd-type="'item'"
-                              dnd-dragstart="logEvent('Started to drag an item')"
-                              dnd-moved="container.employees.splice($index, 1)" dnd-dragend="logEvent(item)">
+                              dnd-dragstart="dragoverCallback(container,index, external, type)"
+                              dnd-moved="container.employees.splice($index, 1)" dnd-dragend="dropCallback(container,index, item, external, type)">
 
-                              <span class="input-group-addon addon-prepend female"
-                                ng-class="{'male': item.gender=='M', 'female': item.gender=='F'}">
-                                <div class="inner-addon">
-                                  <span ng-if="item.gender=='M'">M</span>
-                                  <span ng-if="item.gender=='F'">F</span>
-                                </div>
-                              </span>
-
-                              <div class="inner-text" title="{{item.empName}} ({{item.area}})">
-                                {{item.empName}} <div class="text-muted">({{item.area}})</div>
+                              <div class="inner-text" title="{{item.empName}} -{{item.area}}">
+                                <span class="empId">{{item.empId}}</span> - <span class="text-muted">{{item.area}}</span>
                               </div>
-
-                              <div class="input-group-addon addon-append">
-                                <i class="fa fa-bars" aria-hidden="true"></i>
-                              </div>
-
                             </li>
                            
                             <li class="dndPlaceholder">
-                              Drop any <strong>Employee</strong> here
+                                Drop employee here
                             </li>
                           </ul>
                         </div>
@@ -255,10 +229,9 @@
                                     </span>
 
                                     <div class="vehicle_no">
-                                      <div class="text-small">Vehicle No:</div>
-                                      <div class="text-big">{{person.vehicleNumber}}</div>
+                                      <div class="text-small">{{person.vehicleNumber}}</div>
+                                      <!-- <div class="text-big">{{person.vehicleNumber}}</div> -->
                                     </div>
-
                                   </li>
                                 </dnd-nodrag>
 
@@ -271,17 +244,16 @@
                                   </span>
 
                                   <div class="vehicle_no">
-                                    <div class="text-small">Add</div>
-                                    <div class="text-big">Vehicle</div>
+                                    <div class="text-small">Add Vehicle</div>
                                   </div>
                                 </li>
                                 <li class="dndPlaceholder">
-                                  Drop any <strong>Vehicle</strong> here
+                                  Drop vehicle here
                                 </li>
                               </ul>
                             </div>
 
-                            <div class="col-md-6 pad-left-0 ng-hide">
+                            <div class="col-md-6 pad-left-0">
                               <ul class="employee-list-group" dnd-list="container.guard"
                                 dnd-drop="dropGuardCallback(container,index, item, external, type)"
                                 dnd-allowed-types="allowedGuardTypes" dnd-disable-if="container.guard.length >= 1">
@@ -301,8 +273,7 @@
                                     </span>
 
                                     <div class="vehicle_no">
-                                      <div class="text-small">Guard</div>
-                                      <div class="text-big">Assigned</div>
+                                      <div class="text-small">Guard Assigned</div>
                                     </div>
                                   </li>
                                 </dnd-nodrag>
@@ -317,12 +288,11 @@
                                   </span>
 
                                   <div class="vehicle_no">
-                                    <div class="text-small">Add</div>
-                                    <div class="text-big">Guard</div>
+                                    <div class="text-small">Add guard</div>
                                   </div>
                                 </li>
                                 <li class="dndPlaceholder">
-                                  Drop any <strong>Guard</strong> here
+                                  Drop guard here
                                 </li>
                               </ul>
                             </div>
@@ -333,7 +303,7 @@
                       <div no-drag class="employee-cluster-panel" style="height: 235px;" ng-if="originalRoutes.length">
                         <div class="employee-cluster-panel-heading">
                           <div class="title_container" >
-                            <span class="title_text" style="padding-top:5px;"> <i class="fa fa-plus"></i> Add Route </span>
+                            <span class="title_text"> <i class="fa fa-plus"></i> Add Route </span>
                           </div>
                         </div>
     
@@ -348,7 +318,7 @@
                             </li>
                           </ul>
                         </div>
-                      </div>
+                      </div> 
                     </div>
                   </div>
                 </div>
@@ -356,7 +326,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 pl-0" ng-init="initMap()">
+        <div class="col-md-4 pl-0 hide" ng-init="initMap()">
           <div class="employee-cluster-panel custom-panel-map">
             <div class="employee-cluster-panel-heading">
               <div class="employee-cluster-panel-title">
