--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -471,28 +471,27 @@
           <div class="col-md-12" style="text-align: center;">
             <div class="btn-group">
               <div class="input-group">
-                <button class="btn btn-sm-vaayu btn-terniary btn-sm pull-left route-button" ng-click="copyRoutes()">Copy/Generate Route</button>
+                <button class="btn btn-sm-vaayu btn-terniary btn-sm pull-left route-button"  ng-click="showDiv = !showDiv">Copy/Generate Route</button>
                 <button class="btn btn-sm-vaayu btn-terniary btn-sm pull-left route-button" style="margin-left: 10px;" ng-click="onFreshRoutes()">Fresh Route</button>
               </div>
             </div>
           </div>
         </div>
         
-        <div class="row container-fluid date-box" ng-if="isDateBoxOpen">  
+        <div class="row container-fluid date-box " ng-class="{'vis' : showDiv }" style="display: none;" >  
           <div class="col-md-12" style="margin-bottom: 15px;">To Copy Date</div>
           <div class="col-md-12">
             <form class="form-inline">
               <div class="form-group pr-2">
                   <div class="form-group pr-2">
                     <p class="input-group custom-date date_style">
-                      <input type="text" class="form-control data_in_style" datepicker-popup="{{toCopyDateFormat}}" ng-model="toCopyDate" ng-change="updateDateFilters('copy', toCopyDate)" is-open="toCopyDateOpened" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"
+                      <input type="text" class="form-control data_in_style" datepicker-popup="{{toCopyDateFormat}}" ng-model="toCopyDate" ng-change="updateDateFilters('copy', toCopyDate)" is-open="toCopyDateOpened " datepicker-options="copyDateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"
                       >
                       <span class="input-group-btn-datePicket">
                         <button type="button" class="btn btn-default data_in_style" ng-click="toCopyDateOpen($event)">
                             <i class="fa fa-calendar"></i>
                         </button>
                       </span>
-                      
                     </p>
                   </div>
                   <button class="btn btn-terniary-blue" ng-click="onSubmit()">OK</button>
