updateFilters called on Copy and fresh route

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -471,7 +471,7 @@
           <div class="col-md-12" style="text-align: center;">
             <div class="btn-group">
               <div class="input-group">
-                <button class="btn btn-sm-vaayu btn-terniary btn-sm pull-left route-button"  ng-click="showDiv = !showDiv">Copy/Generate Route</button>
+                <button class="btn btn-sm-vaayu btn-terniary btn-sm pull-left route-button"  ng-click="showDiv = !showDiv()">Copy/Generate Route</button>
                 <button class="btn btn-sm-vaayu btn-terniary btn-sm pull-left route-button" style="margin-left: 10px;" ng-click="onFreshRoutes()">Fresh Route</button>
               </div>
             </div>
