--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -219,10 +219,10 @@
   border-radius: 4px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   background-color: #ffffff;
-  display: inline-block;
+  /* display: inline-block;
   margin-bottom: 10px;
   margin-right: 10px;
-  height: max-content;
+  height: max-content; */
 }
 
 .fixed-width {
@@ -383,7 +383,7 @@
 
 .vayau-routing .employee-cluster-panel .employee-list-group-item .inner-text {
   padding: 0px 0 0 10px;
-  width: 142px;
+  width: 100%;
   float:left;
   align-items: center;
   /* display: flex; */
@@ -970,21 +970,20 @@
   width: 16px;
   margin-right: 2px;
 }
-.vaayu-dropzone {
-  -webkit-column-count: 6; /* Chrome, Safari, Opera */
-  -moz-column-count: 6; /* Firefox */
+/* .vaayu-dropzone {
+  -webkit-column-count: 6; 
+  -moz-column-count: 6;
   column-count: 6;
-  -webkit-column-gap: 2px; /* Chrome, Safari, Opera */
-  -moz-column-gap: 2px; /* Firefox */
+  -webkit-column-gap: 2px; 
+  -moz-column-gap: 2px; 
   column-gap: 2px;
   display: flex;
-  /* flex-direction: column; */
   flex-wrap: wrap;
 }
 
 .vaayu-dropzone>*{
   flex: 1 1 80px;
-}
+} */
 
 /* .employee-cluster-panel { 
   display: inline-block;
@@ -1091,3 +1090,16 @@
         transform: rotate(360deg);
       }
     }
+
+
+    /* Mesonary Style Goes Here */
+  .masonry-brick {
+    margin: 0 8px 8px 0;
+    display: none;
+    width:200px;
+    float:left;
+  }
+
+  .masonry-brick.loaded {
+      display: block;
+  }
