--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1096,10 +1096,23 @@
   .masonry-brick {
     margin: 0 8px 8px 0;
     display: none;
-    width:200px;
-    float:left;
+    width:210px;
+    /* float:left; */
   }
 
   .masonry-brick.loaded {
       display: block;
+  }
+
+  .width-80 {
+    width:75% !important;
+    float:left;
+  }
+
+  .width-20 {
+    width:25% !important;
+    float:left;
+  }
+  .tempRoute {
+    width:90% !important;
   }
